--- a/Aboutus.html
+++ b/Aboutus.html
@@ -96,12 +96,12 @@ i{
  
         <div class="profile-card">
             <div class="img">
-                <img src="img/tanuj.png">
+                <img src="MusicPlayerFiles/img/tanuj.png">
             </div>
             <div class="caption">
                 <h3>Tanuj Rawat</h3>
-                <p>Team Leader and website integrator.
-                    Created Music section,Joke Generator for this Project.
+                <p>
+                  Created this Project using HTML,CSS AND JAVASCRIPT.
                 </p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook"></i></a>
