--- a/AllQuizFiles/highscores.html
+++ b/AllQuizFiles/highscores.html
@@ -13,10 +13,10 @@
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="/" class="btn">Go Home<i class="fas fa-home"></i></a>
+            <a href="./quiz.html" class="btn">Go Home<i class="fas fa-home"></i></a>
         </div>
     </div>
-    <script src="highscores.js"></script>
+    <script src="./highscores.js"></script>
 </body>
 </html>
 © 2021 GitHub, Inc.
