--- a/AnalogClock/analogClock.html
+++ b/AnalogClock/analogClock.html
@@ -33,6 +33,7 @@
                     <div id="hour"></div>
                 </div>
             </div>
+        </div>
     </div>
 
     <script src="./analog.js"></script>
