--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <ul class="desktop-list">
             <li><a href="#">Home</a></li>
             <li><a href="Aboutus.html">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Project</a></li>
+            <li><a href="AboutServices.html">Services</a></li>
+            <!-- <li><a href="#">Project</a></li> -->
             <li><a class="ctn" href="contact.html">Contact-us</a></li>
         </ul>
         <!-- <ul class="mobile-list">
