--- a/contact.html
+++ b/contact.html
@@ -42,26 +42,31 @@ input[type=submit]:hover {
 <h3>Contact Form</h3>
 
 <div class="container">
-  <form >
+  <form  id="contactform">
     <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 
     <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
 
     <label for="country">Country</label>
     <select id="country" name="country">
-      <option value="australia">Australia</option>
+      <option value="India">India</option>
       <option value="canada">Canada</option>
       <option value="usa">USA</option>
+      <option value="australia">Australia</option>
+      <option value="Zimbawe">Canada</option>
+      <option value="New Zealand">New Zealand</option>
     </select>
 
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-    <input type="submit" value="Submit">
+    <input id ="submit" type="submit" value="Submit">
   </form>
 </div>
-
+<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase.js"></script>
+<script src="form.js"></script>
+<script src="fireConfig.js"></script>
 </body>
 </html>
